--- a/PROJECTS/mugcard/mugcard.html
+++ b/PROJECTS/mugcard/mugcard.html
@@ -25,6 +25,7 @@
                 <p class="price">
                     <span class="productTitle sellPrice">₹149</span>
                     <span class="desc originalPrice">₹230</span>
+                    <span aria-hidden="true">₹37,099</span>
                 </p>
                 <button class="btn">
                     <img class="btnImg" src="https://bit.ly/3Q6Adni" alt="" class="btn_img" />
