--- a/PROJECTS/mugcard/mugcard.html
+++ b/PROJECTS/mugcard/mugcard.html
@@ -19,7 +19,7 @@
                 <p class="product">COFFEE MUG</p>
                 <h2 class="productTitle">White Coffee <br> Mug</h2>
                 <p class="desc">
-                    Coffee Mugs are designed to express emotions. These are acclaimed
+                    Coffee Mug is designed to express emotions. These are acclaimed
                     for their amazing designs & superior quality.
                 </p>
                 <p class="price">
